Release 1.0.6